Fixed bug #33940 (array_map() fails to pass by reference when called recursively)